Commander Genius Release (CloneKeenPlus):
=========================================

v0.3.1.0:
---------

15-12-2009
- Minor fixes
- New effects class. Vibration and Vorticon shot scene in EP1 are working again.
- New Merge Colour effect, which can be seen, when player enters a level

13-12-2009
- Added Vorticon Elite back to CG

12-12-2009
- Added Tank-Robot of Episode 2 back
- Physics improvements
- Teleporter in Episode 3 don't need the exe file. But it's calculated now...
- Teleporter are now read from the Exe-file in Episode 1 
- Improved AI (Yorp)
- Removed some ugly tiles on the title screen

10-12-2009
- Fixed some hidden segfaults and wrong inits, which provoked the yorps getting unstunnable
- Now using the fonts.bmp file, we can use other font graphics (with hi-colour support!)

09-12-2009
- Fixed ice cannons to the engine. Now they are working again

08-12-2009
- Corrected start inventory for all Episodes
- The Stone with Rope in Episode 1 Level 16 is working again!
- The Tank Robot of Episode 1 is working again!rtin

07-12-2009
- Added Easy mode. It's still has no function
- Menus have been stripped down a bit (Pizza2004)

06-12-2009
- Now the YourPartsAreMissing has the original icons
- The pogo is frozen. I did that for testing
- Player doesn't fall anymore when level starts
- Autoraygun option is working correctly again!
- Godmode on map is working correctly again
- The option level-replayability is working once again!
- Yorps are screaming correctly again, when they are shot

05-12-2009
- New Playgame Engine System
- The entire Code has been rewritten in order to support more games (Galaxy for example)
- Much more solid engine
- New and innovative Savegame System (Pizza2004)
- New Physics [WIP] (Tulip)
- Better timer that makes the game much faster (Pickle)

v0.3.0.4:
---------

24-09-2009
- New Map System. Now maps of any size can be used for CG

11-09-2009
- many bugs fixes (Many thanks to James K. Beard)